revise FHE process

--- a/monadring/monadring.bib
+++ b/monadring/monadring.bib
@@ -122,3 +122,31 @@
   year   = {2022},
   note   = {\url{https://github.com/zama-ai/tfhe-rs}}
 }
+
+@inproceedings{pedersen1991non,
+  title        = {Non-interactive and information-theoretic secure verifiable secret sharing},
+  author       = {Pedersen, Torben Pryds},
+  booktitle    = {Annual international cryptology conference},
+  pages        = {129--140},
+  year         = {1991},
+  organization = {Springer}
+}
+
+@inproceedings{feldman1987practical,
+  title        = {A practical scheme for non-interactive verifiable secret sharing},
+  author       = {Feldman, Paul},
+  booktitle    = {28th Annual Symposium on Foundations of Computer Science (sfcs 1987)},
+  pages        = {427--438},
+  year         = {1987},
+  organization = {IEEE}
+}
+
+@article{gennaro2007secure,
+  title     = {Secure distributed key generation for discrete-log based cryptosystems},
+  author    = {Gennaro, Rosario and Jarecki, Stanislaw and Krawczyk, Hugo and Rabin, Tal},
+  journal   = {Journal of Cryptology},
+  volume    = {20},
+  pages     = {51--83},
+  year      = {2007},
+  publisher = {Springer}
+}
